--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: xyz-auth-service
+  datasource:
+    url: jdbc:mariadb://localhost:3306/auth_db
+    username: auth_user
+    password: password
+    driver-class-name: org.mariadb.jdbc.Driver
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
 
 springdoc:
   api-docs:
