feat(test): add new profile 'test-containers' for integration testing with MariaDB Testcontainers
- Introduced test-containers profile config
  - Configured datasource with jdbc:tc:mariadb
  - Enabled Flyway migrations for realistic schema
  - Set Hibernate dialect to MariaDBDialect
- Separated testing strategies:
  - `test` profile → lightweight unit tests with H2
  - `test-containers` profile → integration tests with MariaDB container
- Added logging configuration for Testcontainers and Flyway

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,3 +31,29 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.H2Dialect
+
+---
+spring:
+  config:
+    activate:
+      on-profile: test-containers
+  datasource:
+    url: jdbc:tc:mariadb:11.2:///auth_db
+    username: auth_user
+    password: password
+    driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDBDialect
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+
+logging:
+  level:
+    org.testcontainers: INFO
+    org.flywaydb: DEBUG
